<resources>
    <string name="app_name">Sound Toggle</string>
    <string name="step1">Step 1</string>
    <string name="request_permission">Request Permission</string>
    <string name="permission_text">The \'change do not disturb\' permission is required in order to switch between the different volume modes.</string>
    <string name="step2">Step 2</string>
    <string name="tutorial_button">Watch Tutorial</string>
    <string name="skip_button">Skip Tutorial</string>
    <string name="tutorial_text">This tutorial will help you understand how this APP works! You can always watch the tutorial again from the menu.</string>
    <string name="tutorial">Tutorial</string>
    <string name="donate">Donate</string>
    <string name="permission_granted">You can set the tile from the quick settings or you can watch the tutorial again!</string>
    <string name="exit">Exit</string>
    <string name="options">Options</string>
    <string name="exclude_modes_skip_when_toggling">Exclude Modes (skip when toggling):</string>
    <string name="normal">Normal</string>
    <string name="vibrate">Vibrate</string>
    <string name="silent">Silent</string>
    <string name="save">Save</string>
    <string name="switch_txt">If enabled, \'Silent\' mode will show pop-ups and badges without sound or vibration.</string>
    <string name="visual_mode_title">Tile visual behavior</string>
    <string name="visual_mode_summary">When enabled, the tile is active only in Normal Sound mode</string>
    <string name="visual_mode_switch_label">Highlight normal sound mode only</string>
    <string name="unknown">Unknown</string>
    <string name="options_saved">Options saved</string>
    <string name="ask_access">Please find Sound Toggle and allow access</string>
    <string name="error_settings">Cannot open Settings on this device.</string>
</resources>